--- a/inst/doc/BD_EM.Rnw
+++ b/inst/doc/BD_EM.Rnw
@@ -220,7 +220,9 @@ names(fullSummary) <- c("Nplus", "Nminus", "Holdtime");
 MLEs.FullyObserved <- M.step.SC( EMsuffStats=fullSummary, T=T, beta.immig= beta.immig); 
 #MLEs
 ###MLE.FullyObserved are NOT the MLE for the EM, but hopefully close as delta-of-observation --> 0
-partialData <- getPartialData( sort(runif(nn,0,T)), dat);
+
+obsTimes <- cumsum(sort(MCMCpack::rdirichlet(1,rep(2,nn))))*T
+partialData <- getPartialData(obsTimes, dat);
 observedSummary <- BDsummaryStats.PO(partialData); observedSummary;
 @ Note that the difference between \verb@fullSummary@ and
 \verb@observedSummary@ is some measure of the information we're
@@ -307,8 +309,8 @@ from \citet{Louis1982}.  Note that this requires that the estimates for $\lambda
 and $\mu$ are accurate!
 
 <<getCIs>>=
-IY.a <- getBDinform.PO(partialData, Lhat=Lhat, Mhat=Mhat, 
-                         beta.immig=beta.immig, delta=.001)
+IY.a <- getBDinform.PO.SC(partialData, Lhat=Lhat, Mhat=Mhat, 
+                          beta.immig=beta.immig, delta=.001)
 print(IY.a);
 zScr <- 1.96;
 Iinv <- solve(IY.a)
